Fix: requested changes
- disable toc on migration page.
- change "Start building for free" text.
- add min width to left sidebar
- fixes overlapping content on main content.

--- a/jekyll/_sass/_sidebar.scss
+++ b/jekyll/_sass/_sidebar.scss
@@ -1,7 +1,7 @@
 $sidebar-spacing-base: 5px;
 
 .sidebar-wrapper {
-  width: $leftbar-width;
+  min-width: $leftbar-width;
   position: relative;
 
   @media screen and (max-width: $screen-xs-max) {
@@ -177,7 +177,7 @@ $sidebar-spacing-base: 5px;
   height: 90vh;
   width: $rightbar-width;
   overflow: scroll;
-  top: 80px;
+  top: 0px;
   font-size: 16px;
   transition: all 0.5s ease-in-out;
 
